--- a/www/index.html
+++ b/www/index.html
@@ -63,8 +63,8 @@ SOFTWARE.
         <div class="container">
             <div class="row col-md-12">
                 <h2>Welcome to Mobile Reader app!</h2><br/>
-                <p><b>Current directory:</b><span id="dirPath"></span></p>
-                <input type="button" style="width:100%" class="btn btn-info" id="changePath" value="Change path" />
+                <p><b>Current directory: </b><span id="dirPath"></span></p>
+                <input type="button" style="width:100%" onclick="window.location.href = 'directory_picker.html'" class="btn btn-info" id="changePath" value="Change path" />
             </div>
             <hr/>
             <div class="row col-md-12">
