--- a/www/index.html
+++ b/www/index.html
@@ -75,9 +75,9 @@ SOFTWARE.
             <hr/>
             <div class="row col-md-12">
                 <h3>Categories:</h3>
-                <div id="categories">
+                <ul class="list-group" id="categoriesUl">
 
-                </div>
+                </ul>
             </div>
         </div>
 
