--- a/www/directory_picker.html
+++ b/www/directory_picker.html
@@ -41,6 +41,8 @@ SOFTWARE.
 
 <body style="font-size: 1em">
 
+<div class="preload_bg"><div class="loading_ani"></div></div>
+
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
