Fixed "stuck"  bug during loading

--- a/www/search_results.html
+++ b/www/search_results.html
@@ -36,7 +36,7 @@ SOFTWARE.
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
-    <title>Offline Mobile Reader - Pick-up directory</title>
+    <title>Offline Mobile Reader - Search results</title>
 </head>
 
 <body style="font-size: 1em">
@@ -64,13 +64,8 @@ SOFTWARE.
 
     <div class="container">
         <div class="row col-md-12">
-            <h2>Select directory</h2><br/>
-            <p><b>Current directory: </b><span id="currDir"></span></p>
-            <input type="button" class="btn btn-info" onclick="picker_selectDir()" value="Select this directory" style="width: 100%"/>
-        </div>
-        <div class="row col-md-12" id="listDiv">
-
-        </div>
+            <h2>Search results</h2><br/>
+            <p><b>Number of occurs: </b><span id="occurNo"></span></p>
     </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
@@ -81,3 +76,4 @@ SOFTWARE.
 </body>
 
 </html>
+    
