--- a/www/search_results.html
+++ b/www/search_results.html
@@ -41,8 +41,6 @@ SOFTWARE.
 
 <body style="font-size: 1em">
 
-    <div class="preload_bg"><div class="loading_ani"></div></div>
-
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -66,6 +64,10 @@ SOFTWARE.
         <div class="row col-md-12">
             <h2>Search results</h2><br/>
             <p><b>Number of occurs: </b><span id="occurNo"></span></p>
+            <p><b>Searched phrase: </b><span id="phrase"></span></p>
+        </div>
+        <hr/>
+        <br/>
     </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
