--- a/www/search_results.html
+++ b/www/search_results.html
@@ -67,7 +67,9 @@ SOFTWARE.
             <p><b>Searched phrase: </b><span id="phrase"></span></p>
         </div>
         <hr/>
-        <br/>
+        <ul id="searchResults">
+
+        </ul>
     </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
